layout/styles.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Viga&display=swap');

:root {
  --bg: #212730;
  --bg2: #1f242b;
  --bg3: #323945;
  --fg: #EEEEEE;
  --fg2: #9ECAD6;
  --fg3: #c0c0c1;
  --radius: 20px;
}

body {
  font-family: "Fira Sans", sans-serif;
  background-color: var(--bg);
  color: var(--fg);

  font-size-adjust: ex-height: 0.5;
  box-sizing: border-box;

  font-size: 12pt;
}

hr {
  margin: 1em 0;
  border: 2px solid var(--bg2);
  border-radius: 2px;
}

/* no idea how this works, I just adapted it to my website lol */
table {
    margin: 1em auto;
    border: 1px solid #ddd;
    border-collapse: separate;
    border-left: 0;
    border-radius: 4px;
    border-spacing: 0px;
    min-width: 20em;

    thead {
        display: table-header-group;
        vertical-align: middle;
        border-color: inherit;
        border-collapse: separate;
        color: var(--fg2)
    }

    tr {
        display: table-row;
        vertical-align: inherit;
        border-color: inherit;
    }

    th, td {
        padding: 5px 4px 6px 4px;
        vertical-align: top;
        border-left: 2px solid #ddd;
    }

    td {
        border-top: 2px solid #ddd;
        padding: 0.5em 1em;
    }

    thead:first-child tr:first-child th:first-child, tbody:first-child tr:first-child td:first-child {
        border-radius: 4px 0 0 0;
    }

    thead:last-child tr:last-child th:first-child, tbody:last-child tr:last-child td:first-child {
        border-radius: 0 0 0 4px;
    }
}

h1, h2, h3, h4, h5, h6 {
  font-style: bold;
  margin: 0.5em 0;
  text-indent: 0;
  color: var(--fg);
}

h1 {
 font-size: 1.9em;
}

h2 {
  font-size: 1.7em;
}

h3 {
  font-size: 1.5em;
}

h4 {
  font-size: 1.3em;
}

h5 {
  font-size: 1.2em;
}

h6 {
  font-size: 1.1em;
}

li {
  list-style: "– " outside;
}

code {
  display: inline-block;
  background-color: var(--bg2);
  border-radius: var(--radius);
  border: 1px solid var(--bg3);
  padding: 0 0.2em;
  font-family: "JetBrains Mono", monospace;
  font-size: 11pt;
  text-indent: 0;
}

pre code {
  display: block;
  padding: 1em;
  margin: 1em 0;
  overflow-x: auto;
}

a {
  color: var(--fg2);
  text-decoration: underline;
}

navbar {
  display: flex;
  flex-direction: row;
  justify-items: center;
  justify-content: center;
  align-items: center;

  background-color: var(--bg2);
  border-bottom: 1px solid var(--bg3);
  padding: 1em;

  .items {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    max-width: 920px;    
  }

  ul {
    display: flex;
    gap: 0.8em;
  }

  li {
    list-style: none;

    a {
      color: var(--fg);
      text-decoration: none;
      transition: text-decoration ease-in;
    }

    a:hover {
      text-decoration: underline;
    }
  }

  .profile-pic {
    border-radius: 50%;
    height: auto;
  }

  .username {
    font-family: "Viga", sans-serif;
    font-weight: bold;
    color: var(--fg);
    text-decoration: none;
    font-size: 1.2em;
    text-align: center;
  }
}

.post-container {
  display: flex;
  flex-direction: column;
  gap: 1em;
  padding: 3em 1em;

  img {
    margin: 1em auto;
  }

  .post-header-wrapper {
    display: flex;
    align-items: center;
    text-align: center;
    flex-direction: column;
    margin: 2em 0;
  }

  .post-header {
    max-width: 80ch;

    #title {
      font-weight: bold;
      font-size: 2em;
      color: var(--fg2);
    }

    #date {
      font-size: 1em;
    }

    #description {
      color: var(--fg3);
    }
  }

  .post-content {
    width: 100%;
    @media (width > 600px) {
        max-width: 1080px;
    }
    margin: auto;
    margin-bottom: 1em;
    text-indent: 1em;

    h2 {
      color: var(--fg2);
      border-bottom: 2px solid var(--bg3);
      border-spacing: 0.5em;
      padding-bottom: 0.5em;
    }
  }
}

.list-container {
  display: flex;
  flex-direction: column;
  gap: 1em;
  align-items: center;
  margin: 2em auto;
  width: 100%;
  max-width: 920px;

  .item {
    background-color: var(--bg2);
    padding: 1em 2em;
    border-radius: var(--radius);
    border: 1px solid var(--bg3);
    width: 95%;
    color: var(--fg3);

    .title {
      display: flex;
      font-weight: 600;
      justify-content: space-between;
      gap: 1em;
      @media (width < 1024px) {
        flex-direction: column;
        gap: 0;
      }
    }

    .metadata {
      display: flex;
      gap: 0.5em;
    }

    .description {
      margin: 0.25em auto;
    }

    a {
      font-size: 1.1em;
      text-decoration: none;
    }
  }
}

footer {
  margin-top: auto;
  width: 100%;
  display: flex;
  justify-content: center;
  gap: 1.2em;
  font-size: 1em;
  padding: 1.5em;
  background-color: var(--bg2);
  border-top: 1px solid var(--bg3);
  color: var(--fg);

  a {
    text-decoration: none;
  }
}

